Project: WIP authentication

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -2,7 +2,7 @@
   "setup.port": "Port",
   "setup.host": "Host",
   "setup.protocol": "Protokoll",
-  "setup.error.test-failed": "Es wurde kein FinWa-Server unter {{url}} gefunden.",
+  "setup.error.test-failed": "Es wurde kein FinWa-Server unter dieser Adresse gefunden.",
   "setup.next": "Weiter",
   "app.title": "FinWa",
   "actions.logout": "Abmelden",
