--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -1,13 +1,18 @@
 {
-  "setup.port": "Port",
-  "setup.host": "Host",
-  "setup.protocol": "Protokoll",
-  "setup.error.test-failed": "Es wurde kein FinWa-Server unter dieser Adresse gefunden.",
-  "setup.next": "Weiter",
-  "app.title": "FinWa",
+  "actions.login": "Anmelden",
   "actions.logout": "Abmelden",
+  "api.error.unknown": "Ein unbekannter Fehler ist aufgetreten.",
+  "app.title": "FinWa",
+  "home.title": "Home",
   "lang.de": "Deutsch",
   "lang.en": "Englisch",
-  "dashboard.github-repository": "GitHub Repository",
-  "home.title": "Home"
+  "login.error.credentials": "Anmeldedaten sind nicht korrekt.",
+  "login.password": "Passwort",
+  "login.username": "Benutzername",
+  "main.github-repository": "GitHub Repository",
+  "setup.error.test-failed": "Es wurde kein FinWa-Server unter dieser Adresse gefunden.",
+  "setup.host": "Host",
+  "setup.next": "Weiter",
+  "setup.port": "Port",
+  "setup.protocol": "Protokoll"
 }
