--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -10,9 +10,9 @@
   "login.password": "Password",
   "login.username": "Username",
   "main.github-repository": "GitHub Repository",
+  "setup.address": "Address",
   "setup.error.test-failed": "No FinWa-Backend detected at the given address.",
-  "setup.host": "Host",
+  "setup.http-tooltip": "HTTP funktioniert nicht in jeder Umgebung und gilt als unsicher. Nur für Testzwecke empfohlen.",
   "setup.next": "Next",
-  "setup.port": "Port",
   "setup.protocol": "Protocol"
 }
