feature(frontend): implement updating of users
Implement updating of users via dialog. Also updated visuals of UserManagementPage.

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -4,6 +4,7 @@
   "actions.login": "Anmelden",
   "actions.logout": "Abmelden",
   "actions.title": "Aktionen",
+  "actions.update": "Aktualisieren",
   "api.error.unknown": "Ein unbekannter Fehler ist aufgetreten.",
   "app.title": "FinWa",
   "events.login.expired": "Login expired.",
