feature(frontend): add translations

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -6,6 +6,9 @@
   "actions.title": "Aktionen",
   "actions.update": "Aktualisieren",
   "api.error.unknown": "Ein unbekannter Fehler ist aufgetreten.",
+  "api.error.user.id-taken": "ID wird bereits verwendet.",
+  "api.error.user.name-taken": "Nutzername wird bereits verwendet.",
+  "api.error.user.not-found": "Nutzer nicht gefunden.",
   "app.title": "FinWa",
   "events.login.expired": "Login expired.",
   "home.title": "Home",
