--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -6,6 +6,9 @@
   "actions.title": "Actions",
   "actions.update": "Update",
   "api.error.unknown": "An unknown error occurred.",
+  "api.error.user.id-taken": "ID is already taken.",
+  "api.error.user.name-taken": "Username is already taken.",
+  "api.error.user.not-found": "User not found.",
   "app.title": "FinWa",
   "events.login.expired": "Anmeldung abgelaufen.",
   "home.title": "Home",
